Arreglo métodos con repositorios y correción de la clase ProductPriceModel.